deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cen-app
  labels:
    app.kubernetes.io/name: cen-app
spec:
  selector:
    app.kubernetes.io/name: cen-app
  ports:
    - name: http
      port: 8080
      targetPort: http
